[package]
name = "gatesim"
authors = ["Mateusz Szpakowski"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
description = "The base library for the Gate Project."
repository = "https://github.com/matszpk/gatesim"
documentation = "https://docs.rs/gatesim"
keywords = ["gate", "logic", "circuit"]
categories = ["science", "mathematics"]

[dependencies]
thiserror = "1.0"
serde = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
